# rag-with-vecdb-test

./: .dockerignore  .env-copy  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
data/: analytics-report.pkl
src/backend/config/: constants.py  data_ingestion_config.py  node_output_parser_config.py  settings.py  settings.yaml
src/backend/core/db/: vector_db.py
src/backend/core/ingestion/: data_ingestion.py
src/backend/core/nodes/: llm.py  rag.py  rewriter.py  router.py  suprvisor.py  validation.py  web_search.py
src/backend/core/parsers/: node_output_parser.py
src/backend/core/state/: graph_sate.py
src/backend/core/workflow/: workflow.py
src/backend/utils/: logger.py  utils.py
